[gd_scene load_steps=30 format=2]

[ext_resource path="res://source/scenes/gui/gui_container_equipment.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/scripts/gui/GuiHud.gd" type="Script" id=2]
[ext_resource path="res://assets/texture/gui/gui_button_x.png" type="Texture" id=3]
[ext_resource path="res://assets/texture/gui/gui_hud_equipment_background.png" type="Texture" id=4]
[ext_resource path="res://assets/texture/gui/gui_button_y.png" type="Texture" id=5]
[ext_resource path="res://assets/texture/gui/gui_button_b.png" type="Texture" id=6]
[ext_resource path="res://assets/resource/equipped_player.tres" type="Resource" id=7]
[ext_resource path="res://assets/texture/gui/clock_temp.png" type="Texture" id=8]
[ext_resource path="res://assets/texture/gui/clock_hand_temp.png" type="Texture" id=9]
[ext_resource path="res://assets/texture/gui/gui_hud_cam_pan.png" type="Texture" id=10]
[ext_resource path="res://assets/texture/gui/clock_minute_hand_temp.png" type="Texture" id=11]
[ext_resource path="res://assets/texture/gui/gui_hud_pad.png" type="Texture" id=12]
[ext_resource path="res://assets/texture/gui/gui_hud_main_background.png" type="Texture" id=13]
[ext_resource path="res://source/scenes/gui/gui_container_display.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/resource/gui_tool.tres" type="Resource" id=15]
[ext_resource path="res://assets/texture/gui/gui_button_left.png" type="Texture" id=16]
[ext_resource path="res://assets/texture/gui/gui_button_right.png" type="Texture" id=17]
[ext_resource path="res://assets/texture/gui/gui_hud_shadow_background.png" type="Texture" id=18]
[ext_resource path="res://assets/shader/canvas_perspective.tres" type="Shader" id=19]
[ext_resource path="res://assets/shader/color_editor.tres" type="Shader" id=20]
[ext_resource path="res://assets/texture/gui/gui_hud_shell.png" type="Texture" id=21]
[ext_resource path="res://assets/texture/gui/gui_hud_slime_fill.png" type="Texture" id=22]
[ext_resource path="res://assets/texture/gui/gui_hud_shell_fill.png" type="Texture" id=23]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 19 )
shader_param/fov = 90.0
shader_param/cull_back = true
shader_param/y_rot = 0.0
shader_param/x_rot = 0.0
shader_param/inset = 0.0

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 20 )
shader_param/brightness = -0.15
shader_param/contrast = 1.3
shader_param/saturation = 13.0
shader_param/hue = 0.22
shader_param/redVal = 1.0
shader_param/greenVal = 1.0
shader_param/blueVal = 1.0
shader_param/tint_color = Color( 1, 1, 1, 1 )
shader_param/tint_effect_factor = 0.0

[sub_resource type="Animation" id=2]
resource_name = "RESET"

[sub_resource type="Animation" id=1]
resource_name = "SlidePad"
length = 0.7
step = 0.01

[sub_resource type="Animation" id=4]
resource_name = "RESET"

[sub_resource type="Animation" id=5]
resource_name = "SlideCam"
length = 0.7
step = 0.01

[node name="GuiHud" type="CanvasLayer"]
script = ExtResource( 2 )
equipment = ExtResource( 7 )
tools = ExtResource( 15 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.85, 0.85 )
custom_constants/margin_right = 0
custom_constants/margin_top = 26
custom_constants/margin_left = 24

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
margin_left = 24.0
margin_top = 26.0
margin_right = 344.0
margin_bottom = 346.0
texture = ExtResource( 21 )

[node name="TextureRect2" type="TextureRect" parent="MarginContainer"]
show_behind_parent = true
margin_left = 24.0
margin_top = 26.0
margin_right = 344.0
margin_bottom = 346.0
texture = ExtResource( 23 )

[node name="TextureRect3" type="TextureRect" parent="MarginContainer"]
show_behind_parent = true
margin_left = 24.0
margin_top = 26.0
margin_right = 344.0
margin_bottom = 346.0
texture = ExtResource( 22 )

[node name="FaceButtons" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1440.0
margin_right = 480.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.75, 0.75 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginButtons" type="MarginContainer" parent="FaceButtons"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 64
custom_constants/margin_top = 32
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64

[node name="HBoxContainer" type="HBoxContainer" parent="FaceButtons/MarginButtons"]
margin_left = 64.0
margin_top = 32.0
margin_right = 1856.0
margin_bottom = 1016.0
custom_constants/separation = 128
alignment = 1

[node name="TextureRect" type="TextureRect" parent="FaceButtons/MarginButtons/HBoxContainer"]
margin_left = 734.0
margin_right = 832.0
margin_bottom = 98.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 16 )

[node name="TextureRect2" type="TextureRect" parent="FaceButtons/MarginButtons/HBoxContainer"]
margin_left = 960.0
margin_right = 1058.0
margin_bottom = 98.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 17 )

[node name="MarginBackground" type="MarginContainer" parent="FaceButtons"]
margin_left = 1488.0
margin_right = 1920.0
margin_bottom = 464.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_constants/margin_right = -48
custom_constants/margin_top = -16

[node name="TextureRect" type="TextureRect" parent="FaceButtons/MarginBackground"]
margin_top = -16.0
margin_right = 480.0
margin_bottom = 464.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="FaceButtons/MarginBackground"]
margin_left = 80.0
margin_top = 64.0
margin_right = 400.0
margin_bottom = 384.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 18 )

[node name="MarginContainer" type="MarginContainer" parent="FaceButtons/MarginBackground"]
margin_top = -16.0
margin_right = 480.0
margin_bottom = 464.0
custom_constants/margin_right = 156
custom_constants/margin_top = 156
custom_constants/margin_left = 156
custom_constants/margin_bottom = 156

[node name="Button" type="TextureRect" parent="FaceButtons/MarginBackground/MarginContainer"]
margin_left = 226.0
margin_top = 226.0
margin_right = 324.0
margin_bottom = 324.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource( 3 )
stretch_mode = 3

[node name="Button3" type="TextureRect" parent="FaceButtons/MarginBackground/MarginContainer"]
margin_left = 156.0
margin_top = 156.0
margin_right = 254.0
margin_bottom = 254.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 5 )
stretch_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="FaceButtons/MarginBackground"]
margin_top = -16.0
margin_right = 480.0
margin_bottom = 464.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100

[node name="ItemSlot1" parent="FaceButtons/MarginBackground/MarginContainer2" groups=["hud_slot"] instance=ExtResource( 1 )]
unique_name_in_owner = true
material = SubResource( 6 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 252.0
margin_top = 100.0
margin_right = 380.0
margin_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="ItemSlot2" parent="FaceButtons/MarginBackground/MarginContainer2" groups=["hud_slot"] instance=ExtResource( 1 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_top = 252.0
margin_right = 228.0
margin_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="FaceButtons"]
margin_left = 1344.0
margin_right = 1920.0
margin_bottom = 328.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_constants/margin_right = 256
custom_constants/margin_top = 8

[node name="TextureRect" type="TextureRect" parent="FaceButtons/MarginContainer"]
margin_top = 8.0
margin_right = 320.0
margin_bottom = 328.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 13 )

[node name="MarginContainer2" type="MarginContainer" parent="FaceButtons/MarginContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = -8
custom_constants/margin_bottom = 78

[node name="ToolSlot" parent="FaceButtons/MarginContainer/TextureRect/MarginContainer2" groups=["hud_slot"] instance=ExtResource( 1 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 92.0
margin_top = 57.0
margin_right = 220.0
margin_bottom = 185.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="FaceButtons/MarginContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 148

[node name="Button2" type="TextureRect" parent="FaceButtons/MarginContainer/TextureRect/MarginContainer"]
material = SubResource( 7 )
margin_left = 111.0
margin_top = 185.0
margin_right = 209.0
margin_bottom = 283.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 6 )
stretch_mode = 3

[node name="ToolPad" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -384.0
margin_right = 384.0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="ToolPad"]
margin_right = 384.0
margin_bottom = 384.0
custom_constants/margin_right = 128
custom_constants/margin_top = 128
custom_constants/margin_left = 128
custom_constants/margin_bottom = 128

[node name="TextureRect" type="TextureRect" parent="ToolPad/MarginContainer"]
margin_left = 128.0
margin_top = 128.0
margin_right = 256.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 128, 128 )
texture = ExtResource( 12 )
stretch_mode = 6

[node name="ToolRight" type="MarginContainer" parent="ToolPad"]
margin_right = 384.0
margin_bottom = 384.0
custom_constants/margin_top = 192
custom_constants/margin_left = 256

[node name="ToolDisplayRight" parent="ToolPad/ToolRight" groups=["hud_slot"] instance=ExtResource( 14 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 192.0
margin_right = 256.0
margin_bottom = 192.0

[node name="ToolBottom" type="MarginContainer" parent="ToolPad"]
margin_right = 384.0
margin_bottom = 384.0

[node name="ToolDisplayBottom" parent="ToolPad/ToolBottom" groups=["hud_slot"] instance=ExtResource( 14 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="ToolLeft" type="MarginContainer" parent="ToolPad"]
margin_right = 384.0
margin_bottom = 384.0
custom_constants/margin_top = 192
custom_constants/margin_left = 128

[node name="ToolDisplayLeft" parent="ToolPad/ToolLeft" groups=["hud_slot"] instance=ExtResource( 14 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_top = 192.0
margin_right = 128.0
margin_bottom = 192.0

[node name="ToolTop" type="MarginContainer" parent="ToolPad"]
margin_right = 384.0
margin_bottom = 384.0
custom_constants/margin_top = 128
custom_constants/margin_left = 192

[node name="ToolDisplayTop" parent="ToolPad/ToolTop" groups=["hud_slot"] instance=ExtResource( 14 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 192.0
margin_top = 128.0
margin_right = 192.0
margin_bottom = 128.0
grow_horizontal = 0

[node name="CamMode" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -192.0
margin_right = 0.000732422
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="CamIcon" type="TextureRect" parent="CamMode"]
unique_name_in_owner = true
margin_right = 192.0
margin_bottom = 192.0
texture = ExtResource( 10 )

[node name="Clock" type="MarginContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -384.0
margin_right = 384.0
custom_constants/margin_right = 64
custom_constants/margin_top = 64
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64

[node name="TextureRect" type="TextureRect" parent="Clock"]
margin_left = 64.0
margin_top = 64.0
margin_right = 320.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 128, 128 )
texture = ExtResource( 8 )
stretch_mode = 6

[node name="MinuteHand" type="TextureRect" parent="Clock"]
margin_left = 64.0
margin_top = 64.0
margin_right = 320.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 128, 128 )
size_flags_vertical = 0
texture = ExtResource( 11 )
stretch_mode = 6

[node name="HourHand" type="TextureRect" parent="Clock"]
margin_left = 64.0
margin_top = 64.0
margin_right = 320.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 128, 128 )
size_flags_vertical = 0
texture = ExtResource( 9 )
stretch_mode = 6

[node name="Tween" type="Tween" parent="Clock"]

[node name="AnimationPad" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/SlidePad = SubResource( 1 )

[node name="AnimationCam" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/SlideCam = SubResource( 5 )
